# Soltaire

./: .gitignore  CLAUDE.md  Card.py  Deck.py  README.md  main.py  pyproject.toml
src/soltaire/: __init__.py  card.py  deck.py  foundations.py  game_rules.py  hand.py  main.py  tableau.py  waste.py
src/soltaire/agents/: base.py  greedy_agent.py  random_agent.py
src/soltaire/cli/: __init__.py  __main__.py  cli.py
src/soltaire/core/: __init__.py  card.py  deck.py  foundations.py  game_logic.py  game_rules.py  hand.py  tableau.py  waste.py
src/soltaire/gui/: __init__.py  __main__.py  gui.py
tests/: test_card.py  test_cli.py  test_deck.py  test_foundations.py  test_game_rules.py  test_hand.py  test_tableau.py  test_waste.py
