[project]
name = "soltaire"
version = "0.1.0"
description = ""
authors = [
    {name = "Alfons",email = "alfons@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)"
]

[project.scripts]
soltaire = "soltaire.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
